<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidPractices</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Another Activity</string>
    <string name="button2">Lunch Map</string>
    <string name="button3">Lunch Market</string>
    <string name="button4">Lunch Mail</string>
    <string name="button5">Send Image</string>
    <string name="title_activity_activity_b">ActivityB</string>

</resources>
