<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidpractices.MainActivity" >
	
    
    <Button android:id="@+id/click_button1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
		android:layout_alignParentRight="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:background="#81F7D8"
        android:text="@string/button1"
        android:padding="5dp"/>	
  
    <Button android:id="@+id/click_button2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
		android:layout_alignParentRight="true"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/click_button1"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:background="#81F7D8"
        android:text="@string/button2"
        android:padding="5dp"/>	
  
    <Button android:id="@+id/click_button3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
		android:layout_alignParentRight="true"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/click_button2"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:background="#81F7D8"
        android:text="@string/button3"
        android:padding="5dp"/>	
  
    <Button android:id="@+id/click_button4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
		android:layout_alignParentRight="true"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/click_button3"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:background="#81F7D8"
        android:text="@string/button4"
        android:padding="5dp"/>	
  	
    <Button android:id="@+id/click_button5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
		android:layout_alignParentRight="true"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/click_button4"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:background="#81F7D8"
        android:text="@string/button5"
        android:padding="5dp"/>	
  
	
</RelativeLayout>
